Server/ create image db model and Add controller  routes
